<resources>
    <string name="app_name">Seed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">850039898434444</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Still have no account? Sign up</string>
    <string name="invalid_email">Invalid email</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_already_an_account_log_in">Have already an account? Log in!</string>
    <string name="name">Name</string>
    <string name="user_name">User name</string>
    <string name="user_email">user@email.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="grid_gallery">Grid gallery</string>
    <string name="scrolling_gallery">Scrolling gallery</string>
    <string name="import_title">Import</string>
    <string name="gallery_title">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="log_out">Log out</string>
    <string name="userPhoto">UserPhoto</string>
    <string name="user_email_com">user@email.com</string>
    <string name="or">OR</string>
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_invalid_email">Invalid email</string>
    <string name="exception_message_invalid_name">Invalid name</string>
    <string name="exception_message_invalid_ip_address">Invalid IP adress</string>
    <string name="exception_message_invalid_password">Iinvalid password</string>
    <string name="exception_message_invalid_web_url">Invalid web URL</string>
    <string name="error_message_authentication_error">Authentication error</string>
    <string name="exception_message_empty_field">This field is required</string>
    <string name="title_activity_primary">PrimaryActivity</string>
    <string name="splash_image">splash image</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
