<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">



    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:padding="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/textLarge" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilRegistrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilEmail"
        android:layout_centerHorizontal="true"
        android:padding="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etRegistrationPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLines="1"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/textLarge" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSignUp"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvGoToLogIn"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textMedium" />

    <TextView
        android:id="@+id/tvGoToLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:shadowRadius="3"
        android:text="@string/have_already_an_account_log_in"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSmall" />

</RelativeLayout>