<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tilPassword"
        android:layout_alignParentTop="true"
        android:padding="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress|textMultiLine"
            android:lines="1"
            android:maxLines="1"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/textLarge" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tilLogin"
        android:padding="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword|textMultiLine"
            android:lines="1"
            android:maxLines="1"
            android:textColorHint="@color/colorPrimary"
            android:textSize="@dimen/textLarge" />
    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/view_progress" />
    <Button
        android:id="@+id/btnLogin"
        style="@style/AppTheme.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/OR"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textMedium" />

    <TextView
        android:id="@+id/OR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in_google"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/or" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvGoToSignUp"
        android:layout_toStartOf="@+id/OR" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/sign_in_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tilPassword"
        android:layout_alignTop="@+id/sign_in_google"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/tvGoToSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:shadowRadius="3"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSmall" />

</RelativeLayout>